--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,3 +1,9 @@
+<mat-toolbar color="primary">
+  <mat-icon>
+    settings_input_antenna
+  </mat-icon><span>FishtankIOT</span>
+</mat-toolbar>
+
 <nav mat-tab-nav-bar>
   <a mat-tab-link *ngFor="let link of navLinks" [routerLink]="link.path" routerLinkActive #rla="routerLinkActive"
     [active]="rla.isActive">
