Conditional styling and error info, if your fish are in trouble

--- a/frontend/src/app/sensor-list/sensor-list.component.html
+++ b/frontend/src/app/sensor-list/sensor-list.component.html
@@ -1,5 +1,5 @@
 <mat-list>
   <div *ngFor="let sensor of sensorListData">
-    <app-sensor-detail [sensordata]="sensor"> </app-sensor-detail>
+    <app-sensor-detail [sensordata]="sensor" [inList]="true"> </app-sensor-detail>
   </div>
 </mat-list>
