--- a/frontend/src/app/sensor/sensor.component.html
+++ b/frontend/src/app/sensor/sensor.component.html
@@ -1,2 +1,2 @@
-<app-sensor-detail [sensordata]="this.sensordata">
+<app-sensor-detail [sensordata]="this.sensordata" [inList]="false">
 </app-sensor-detail>
