Linked up service, added live reload functionality (uncommented for now, this will eat up free tier aws calls)

--- a/frontend/src/app/sensor/sensor-detail/sensor-detail.component.html
+++ b/frontend/src/app/sensor/sensor-detail/sensor-detail.component.html
@@ -28,7 +28,7 @@
       </mat-list-item>
       <mat-list-item>
         <mat-icon matListIcon>access_time</mat-icon>
-        <h3 matLine>Timestamp: {{ sensordata.Timestamp.stringValue | date }}</h3>
+        <h3 matLine>Timestamp: {{ sensordata.Timestamp.stringValue | date : "medium"}}</h3>
       </mat-list-item>
     </mat-list>
   </mat-card>
