--- a/frontend/src/app/sensor/sensor-detail/sensor-detail.component.css
+++ b/frontend/src/app/sensor/sensor-detail/sensor-detail.component.css
@@ -1,6 +1,6 @@
 .matCard
 {
-  width: 100%;
+  width: 85%;
 }
 .red {
 color: red;
@@ -10,4 +10,10 @@ color: red;
 }
 .green {
   color: green;
+}
+
+.paddingAndBorder
+{
+  padding : 5px;
+  border : 2px;
 }
